feat(workflow): 优化审批流节点定义和服务
- 为 ApproveConditionNode、ApprovePersonNode 和 ApproveSwitchNode 添加输入字段配置
- 更新 ApprovePersonNode 以支持选择主管级别
- 修复节点定义获取逻辑，优先使用缓存中的节点定义
- 优化工作流实例创建和发布流程
- 重命名 WorkflowType 枚举，提高代码一致性